--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <div class="container">
         <h1>Scam Detector</h1>
         <div id="level" class="level">Level: 1</div>
+        <div id="score" class="level">Scams Identified: 0/3</div>
         <div id="scenario" class="scenario">
             <!-- Random scenario will be inserted here -->
         </div>
@@ -139,6 +140,18 @@
                 `,
                 difficulty: 2
             },
+            {
+                type: "none",
+                content: `
+                    <h2>Join Our Webinar</h2>
+                    <p>Sign up for our free webinar on cybersecurity best practices.</p>
+                    <form>
+                        <input type="text" placeholder="Enter your name" style="margin-bottom: 10px; padding: 5px;">
+                        <button style="padding: 5px;">Register</button>
+                    </form>
+                `,
+                difficulty: 2
+            },
             // Level 3: Hard
             {
                 type: "phishing",
@@ -152,12 +165,9 @@
             {
                 type: "none",
                 content: `
-                    <h2>Join Our Webinar</h2>
-                    <p>Sign up for our free webinar on cybersecurity best practices.</p>
-                    <form>
-                        <input type="text" placeholder="Enter your name" style="margin-bottom: 10px; padding: 5px;">
-                        <button style="padding: 5px;">Register</button>
-                    </form>
+                    <h2>Exclusive Invitation</h2>
+                    <p>You have been invited to join our elite program. No strings attached!</p>
+                    <a href="#" style="color: green;">Accept Invitation</a>
                 `,
                 difficulty: 3
             }
@@ -165,9 +175,10 @@
 
         let currentScenario;
         let level = 1;
+        let correctScams = 0;
 
         function randomizeScenario() {
-            const levelScenarios = scenarios.filter(scenario => scenario.difficulty === level);
+            const levelScenarios = scenarios.filter(scenario => scenario.difficulty <= level);
             currentScenario = levelScenarios[Math.floor(Math.random() * levelScenarios.length)];
             document.getElementById('scenario').innerHTML = currentScenario.content;
             document.getElementById('reportOptions').style.display = 'none';
@@ -183,11 +194,17 @@
         function submitReport() {
             const selectedOption = document.getElementById('reportOptions').value;
             if (selectedOption === currentScenario.type) {
-                alert("Correct! You identified the scam.");
-                level = Math.min(level + 1, 3); // Cap the level at 3
+                alert("Correct! You identified the scenario.");
+                correctScams++;
+                if (correctScams >= 3) {
+                    level++;
+                    correctScams = 0;
+                    alert(`Level up! Welcome to Level ${level}.`);
+                }
                 document.getElementById('level').innerText = `Level: ${level}`;
+                document.getElementById('score').innerText = `Scams Identified: ${correctScams}/3`;
             } else {
-                alert("Incorrect. Try again.");
+                alert("Incorrect. Be careful!");
             }
             randomizeScenario();
         }
